2009-11-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Add option to enable unaccelerated RandR rotation ("SWRandR").
        The accelerated option "HWRandR" is currently not implemented.

	* src/openchrome.man:
	* src/via_driver.c: (VIAPreInit):

2009-11-20  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Enabled new mode switch for PM800 chipset, 
        to resolve many bugs with resolution detecting and changing
        (eg. switching to console)

	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit):

2009-11-07  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Add more comments to ViaSetSecondaryFIFO, add panel scale support for 
 	CLE266 and KM400, fix bug with malloc.

	* src/via_bandwidth.c: (ViaSetSecondaryFIFO):
	* src/via_panel.c: (ViaPanelScale), (ViaPanelGetNativeDisplayMode):

2009-09-26  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Save/restore ECK Clock Synthesizer

	* src/via_driver.c: (VIASave), (VIARestore):
	* src/via_driver.h:

2009-09-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fixed bug with panel autodetection using
	ViaPanelGetNativeModeFromScratchPad function

	* src/via_panel.c:

2009-09-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fixed problem with backlite (Ticket #308)

	* src/via_lvds.c: (ViaLVDSSoftwarePowerFirstSequence),
	(ViaLVDSSoftwarePowerSecondSequence),
	(ViaLVDSHardwarePowerFirstSequence),
	(ViaLVDSHardwarePowerSecondSequence), (ViaLVDSPower):

2009-09-15  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	TV-out VT1625 chip support

	* src/via_bios.h:
	* src/via_crtc.c: (ViaFirstCRTCSetMode):
	* src/via_display.c: (ViaDisplayEnableDVO), (ViaDisplayDisableDVO),
	(ViaDisplaySetStreamOnDVO):
	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit):
	* src/via_mode.c: (ViaTVSetMode), (ViaOutputsSelect), (ViaModeSet):
	* src/via_vt162x.c: (ViaSetTVClockSource), (VT1622ModeI2C),
	(VT1622ModeCrtc):
	* src/via_vt162x.h:

2009-09-15  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Cursor support speedup
